fix webkit-appearance on ios buttons

--- a/src/assets/css/webflow.css
+++ b/src/assets/css/webflow.css
@@ -91,9 +91,6 @@ html.w-mod-touch * {
   cursor: pointer;
   border-radius: 0;
 }
-input.w-button {
-  -webkit-appearance: button;
-}
 html[data-w-dynpage] [data-w-cloak] {
   color: transparent !important;
 }
@@ -291,7 +288,6 @@ html input[type="button"],
 input[type="reset"] {
   border: 0;
   cursor: pointer;
-  -webkit-appearance: button;
 }
 .w-form {
   margin: 0 0 15px;
@@ -909,9 +905,12 @@ textarea.w-select {
   min-height: 100%;
   z-index: -100;
 }
+input {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
 .w-background-video > video::-webkit-media-controls-start-playback-button {
   display: none !important;
-  -webkit-appearance: none;
 }
 .w-slider {
   position: relative;
